# Pokus

./: .gitignore  README.md  agents.md  business-analysis.md  business_analysis.md  docs_API_BATCH_STRATEGY.md  docs_API_OPTIONS.md  docs_DATASET_PREP.md  gradle.properties  product_spec.md  settings.gradle.kts
Project/: .env.example  DEV_RUNTIME.md  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
Project/.evidence/: m31_t65_non_keyed_live_probe.sqlite3  m31_t68_official_symbology.sqlite3  t73_gate_runtime.sqlite3  t75_gate_runtime.sqlite3
Project/tests/: test_admin_audit_models.py  test_admin_scope_config.py  test_app_exchange_readiness_endpoints.py  test_app_supported_universe_endpoint.py  test_auth_boundary.py  test_calendar_service.py  test_candidate_value_persistence.py  test_discovery_adapter_contract.py  test_discovery_candidate_persistence.py  test_discovery_combined_loader_integration.py  test_discovery_ranking.py  test_entrypoints_smoke.py  test_exchange_priority.py  test_health_reporting.py  test_instrument_identity_models.py  test_load_jobs.py  test_load_tracking_models.py  test_m1_integration_gate.py  test_m2_integration_gate.py  test_m31_t65_non_keyed_source_probes.py  test_m31_t66_keyed_a_probes.py  test_m31_t66_keyed_a_runner.py  test_m31_t67_keyed_b_evidence_artifact.py  test_m31_t67_keyed_b_probe_payloads.py  test_m31_t67_keyed_b_registry.py  test_m31_t68_official_symbology_normalization.py  test_m31_t68_official_symbology_runner.py  test_m31_t69_macro_enrichment_probes.py  test_m31_t69_macro_enrichment_workflow.py  test_observability.py  (+33 more)
(+282 files in other folders)
